--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,55 +10,72 @@
 
 <body>
     <header>
-        <div class="container-fluid p-3 border-fuente bg-resalte d-flex justify-content-between">
-            <div class="d-flex mt-3">
-                <div class="nf-logo">
-                    <!--   <img src="../static/images/logo_NFF.png" alt="NF-Logo" class="nf-logo">-->
-                    <img th:src="@{/images/logo_NFF.png}" alt="NF-Logo" class="nf-logo ">
-                </div>
-                <div class="">
-                    <div class="nutrifusion-food">
-                        <!-- <img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food"> -->
-                        <img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
-
+        <div class=" container-fluid text-center border-fuente bg-resalte">
+            <div class="row justify-content-between text-center">
+                <div class="col-md-3 col-sm-4 col-xs-1 d-inline-block align-top">
+                    <div class="container-logo d-inline-block align-top pt-3">
+                        <img th:src="@{/images/logo_NFF.png}" alt="NF-Logo" class="nf-logo d-inline">
                     </div>
-                    <div class="slogan">
-                        <p>Fusionando Sabor y Nutrición</p>
+                    <div class="d-inline-block mt-3">
+                        <div class="nutrifusion-food  d-none d-md-block ">
+                            <img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
+
+                        </div>
+                        <div class="slogan d-none d-xl-block ">
+                            <p>Fusionando Sabor y Nutrición</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-7 col-sm-6">
+                    <nav class="navbar-expand-md d-inline-block">
+                        <div class=" mt-3">
+                            <button class="navbar-toggler bg-info " type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
+                                aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                                <ul class="navbar d-xs-block">
+                                    <li class="nav-item border-top border-fuente"><a href="/home"
+                                            class="nav-link active">INICIO</a></li>
+
+                                    <li class="nav-item border-top border-fuente"><a href="/recipes"
+                                            class="nav-link active">RECETAS</a></li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle border-top border-fuente" href="/categories"
+                                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            CATEGORIAS
+                                        </a>
+                                        <ul class="dropdown-menu bg-fondo">
+                                            <li><a class="dropdown-item" href="/recipes">Todo</a></li>
+                                            <li>
+                                                <hr class="dropdown-divider bg-fuente">
+                                            </li>
+                                            <li><a class="dropdown-item" href="/categories/1/recipes">Salado</a></li>
+                                            <li><a class="dropdown-item" href="/categories/2/recipes">Postre</a></li>
+                                            <li><a class="dropdown-item" href="/categories/3/recipes">Bebida</a></li>
+                                            <li><a class="dropdown-item" href="/categories/4/recipes">Snack</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item border-top border-fuente"><a href="/nutritionists/1"
+                                            class="nav-link active">PERFIL</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+                <div class="col-md-2 col-sm-4  d-inline rounded mt-4">
+                    <div class="row justify-content-center">
+                        <div class="col-8 bg-info p-1">
+                            <div class="col-12 bg-info pt-2 border border-fondo bw-5">
+                                <a href="/recipes/add">
+                                    <h4 class="text-fondo">Log in</h4>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <nav class="navbar-expand-lg d-inline-block col-md-6">
-                <div class="container-fluid-nav mt-3 px-5 text-center">
-                    <ul class="navbar px-3">
-                        <li class="nav-item border-top border-fuente"><a href="/home"
-                                class="nav-link active">INICIO</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle border-top border-fuente" href="/categories" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                CATEGORIAS
-                            </a>
-                            <ul class="dropdown-menu bg-fondo">
-                                <li><a class="dropdown-item" href="/recipes">Todo</a></li>
-                                <li><hr class="dropdown-divider bg-fuente"></li>
-                                <li><a class="dropdown-item" href="/categories/1/recipes">Salado</a></li>
-                                <li><a class="dropdown-item" href="/categories/2/recipes">Postre</a></li>
-                                <li><a class="dropdown-item" href="/categories/3/recipes">Bebida</a></li>
-                                <li><a class="dropdown-item" href="/categories/4/recipes">Snack</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item border-top border-fuente"><a href="/recipes"
-                                class="nav-link active">RECETAS</a></li>
-                        <li class="nav-item border-top border-fuente"><a href="/nutritionists"
-                                class="nav-link active">NUTRICIONISTAS</a></li>
-                        <li class="nav-item border-top border-fuente"><a href="/nutritionists/1"
-                                class="nav-link active">PERFIL</a></li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="signup-button d-inline rounded float-end  mt-4">
-                <button type="button" class="btn btn-info border mx-3 p-2">SIGN UP</button>
-
-            </div>
-
         </div>
 
         <!-- <hr class="header border border-fuente">-->
@@ -77,7 +94,9 @@
             <br>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
