Modify html for the profile and buttom log in

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -68,7 +68,7 @@
                     <div class="row justify-content-center">
                         <div class="col-8 bg-info p-1">
                             <div class="col-12 bg-info pt-2 border border-fondo bw-5">
-                                <a href="/recipes/add">
+                                <a href="#">
                                     <h4 class="text-fondo">Log in</h4>
                                 </a>
                             </div>
