--- a/src/main/resources/templates/scss/custom.scss
+++ b/src/main/resources/templates/scss/custom.scss
@@ -224,6 +224,10 @@ ul {
   max-height: 55vh;
   width: 90%;
 }
+ .recipe-profile{
+  height: 50vh;
+  width: 100%;
+ }
 
 
 /*.welcome-text, .title-categories{
