Modify thymeleaf to show language

--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -23,6 +23,8 @@
                 <br>
                 <p>Tiempo</p>
                 <p class="text-info" th:text="${recipe.time}"></p>
+                <p>Idioma</p>
+                <p class="text-info" th:text="${recipe.language}"></p>
                 <p>Alergenos</p>
                 <ul>
                     <li th:each="allergen : ${recipe.allergen}">
