--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -34,7 +34,8 @@
                             </a>
                             <li th:text="|${'Tiempo de preparación: ' + recipe.time + ' min'}|">
                             <li>Alergenos: </li>
-                            <li th:text="|${'Descripción: ' + recipe.description}|"></li>    
+                            <li th:text="|${'Descripción: ' + recipe.description}|"></li>
+                            <li th:text="|${'Idioma: ' + recipe.language}|"></li>
                         </ul>
                     </li>
                 </div>
