--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,11 +14,11 @@
             <div class="row justify-content-between text-center">
                 <div class="col-md-3 col-sm-4 col-xs-1 d-inline-block align-top">
                     <div class="container-logo d-inline-block align-top pt-3">
-                        <img th:src="@{/images/logo_NFF.png}" alt="NF-Logo" class="nf-logo d-inline">
+                        <img th:src="@{/images/logo/logo_NFF.png}" alt="NF-Logo" class="nf-logo d-inline">
                     </div>
                     <div class="d-inline-block mt-3">
                         <div class="nutrifusion-food  d-none d-md-block ">
-                            <img th:src="@{/images/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
+                            <img th:src="@{/images/logo/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
 
                         </div>
                         <div class="slogan d-none d-xl-block ">
