--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -20,7 +20,7 @@
             <div class="recipes-info bg-fondo d-flex border-top border-bottom border-fuente"
             th:classappend="${stat.index % 2 == 0 ? 'flex-row' : 'flex-row-reverse'}">
                 <div class="recipe-picture flex-fill">
-                    <img th:src="@{/images/}+recipe_+${recipe.id}+.jpeg" alt="Recipe Image">
+                    <img th:src="@{/images/recipe/}+recipe_+${recipe.id}+.jpeg" alt="Recipe Image">
                 </div>
                 <div class="recipe-data flex-fill justify-content-center align-center border-top pt-3">
                     <li class="recipe-category-name fw-normal">
