Add user images and modify userId in recipes

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,7 +32,7 @@
                     <a href="/categories" ><h2 class="text-info">CATEGORIAS</h2></a>
                     <article class="d-inline-block px-5 py-3">
                         <div class="d-inline-block px-4 ">
-                            <img th:src="@{/images/recetas.png}" alt="recipes" class="img-recipes d-block pb-3 rounded">
+                            <img th:src="@{/images/category/recetas.png}" alt="recipes" class="img-recipes d-block pb-3 rounded">
                               <div class="recipe-tags bg-resalte d-inline-block text-left">
                                 <a href="/recipes">
                                     <h3 class="d-inline-block ml-2">Recetas</h3>
