--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -20,7 +20,7 @@
                 <div class="row align-items-stretch bg-resalte m-3 p-5">
                     <div class="d-none d-md-block col-md-5 align-items-center text-center py-4 bg-fondo">
                         <div class="container-fluid">
-                            <img class="profile-picture" th:src="@{/images/user}+user_+${nutritionist.id}+.png"
+                            <img class="profile-picture" th:src="@{/images/user/}+user_+${nutritionist.id}+.png"
                                 alt="imagen perfil">
                         </div>
                     </div>
