--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,60 +9,66 @@
     <link rel="stylesheet" href="../static/css/custom.css"> <!-- link verlo previsualizador enlace css-->
     <title>Receta</title>
 </head>
+
 <body>
     <div class="container">
-<header th:insert="fragments.html :: header">Header</header>
-<main class="content">
-    <div class="recipe-container d-flex justify-content-center align-items-center border-top border-bottom border-fuente">
-        <div class="recipe-info bg-fondo d-flex border-top border-bottom border-left border-right border-fuente">
-            <div class="recipe-image flex-fill">
-                <img th:src="@{/images/recipe/}+recipe_+${recipe.id}+.jpeg" alt="Recipe Image">
+        <header th:insert="fragments.html :: header">Header</header>
+        <main class="content">
+            <div class="container-fluid bg-fondo">
+                <section
+                class="container-fluid justify-content-center d-inline-block d-md-inline-block  recipe-info border-resalte bg-fondo ">
+                    <div class="row border-fuente border-bottom border-left border-right mx-5">
+                        <div class="recipe-image col-12 col-md-6 d-md-block d-inline-block p-0">
+                            <img th:src="@{/images/}+recipe_+${recipe.id}+.jpeg" alt="Recipe Image">
+                        </div>
+                        <div
+                            class="recipe-full-info p-2 mt-3 col-md-5 col-12 d-md-block d-inline-block">
+                            <h3 th:text="${recipe.name}"></h3>
+                            <h4 class="text-fuente" th:text="${recipe.category.name}"></h4>
+                            <br>
+                            <p class="text-info" th:text="|${'Tiempo: ' + recipe.time}|"></p>
+                            <p class="text-info" th:text="|${'Idioma: ' + recipe.language}|"></p>
+                            <p>Alergenos:</p>
+                            <ul>
+                                <li th:each="allergen : ${recipe.allergen}">
+                                    <p class="text-info" th:if="${allergen.value}" th:text="${allergen.key}"></p>
+                                </li>
+                            </ul>
+                            <p class="text-info" th:text="|${'Nombre Nutricionista: ' + recipe.user.name}|"></p>
+                            <div class="icon pb-3 fs-3 ">
+                                <i class="fav-icon fa-solid fa-heart text-resalte"></i>
+                                <p>Añadir a favoritos</p>
+                            </div>
+                        </div>
+
+                    </div>
+                </section>
+                <section class="container-fluid">
+                    <div class="recipe-section py-3 mx-5">
+                        <h2>Ingredientes</h2>
+                        <ul>
+                            <li class="text-info" th:each="ingredient : ${recipe.ingredientList}"
+                                th:text="${ingredient.name}"></li>
+                        </ul>
+                    </div>
+                    <div class="recipe-section py-3 mx-5">
+                        <h2>Utensilios</h2>
+                        <ul>
+                            <li class="text-info" th:each="tool : ${recipe.toolList}" th:text="${tool.name}"></li>
+                        </ul>
+                    </div>
+                    <div class="recipe-steps py-3 mx-5">
+                        <h2>Preparacion</h2>
+                        <p class="text-info" th:text="${recipe.steps}"></p>
+                    </div>
+                </section>
             </div>
-            <div class="recipe-full-info flex-fill pt-3 px-4">
-                <h3 th:text="${recipe.name}"></h3>
-                <h4 class="text-fuente" th:text="${recipe.category.name}"></h4>
-                <br>
-                <p>Tiempo</p>
-                <p class="text-info" th:text="${recipe.time}"></p>
-                <p>Idioma</p>
-                <p class="text-info" th:text="${recipe.language}"></p>
-                <p>Alergenos</p>
-                <ul>
-                    <li th:each="allergen : ${recipe.allergen}">
-                    <p class="text-info" th:if="${allergen.value}" th:text="${allergen.key}"></p>
-                    </li>
-                </ul>
-                <p>Nombre Nutricionista</p>
-                <p class="text-info" th:text="${recipe.user.name}"></p>
-                <div class="icon pb-3 fs-3 d-flex">
-                    <i class="fav-icon fa-solid fa-heart text-resalte"></i>
-                    <p>Añadir a favoritos</p>
-                </div>
-            </div>
-        </div>
+        </main>
+        <footer th:insert="fragments.html::footer"></footer>
     </div>
-    <div class="recipe-preparation">
-        <div class="recipe-section py-3">
-            <h2>Ingredientes</h2>
-            <ul>
-                <li class="text-info" th:each="ingredient : ${recipe.ingredientList}" th:text="${ingredient.name}"></li>
-            </ul>
-        </div>
-        <div class="recipe-section py-3">
-            <h2>Utensilios</h2>
-            <ul>
-                <li class="text-info" th:each="tool : ${recipe.toolList}" th:text="${tool.name}"></li>
-            </ul>
-        </div>
-        <div class="recipe-steps py-3">
-            <h2>Preparacion</h2>
-            <p class="text-info" th:text="${recipe.steps}"></p>
-        </div>
-    </div>
-<br><br><br>
-</main>
-<footer th:insert="fragments.html::footer"></footer>
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
