Changed Images Path

--- a/src/main/resources/templates/recipeDetail.html
+++ b/src/main/resources/templates/recipeDetail.html
@@ -19,7 +19,7 @@
                 class="container-fluid justify-content-center d-inline-block d-md-inline-block  recipe-info border-resalte bg-fondo ">
                     <div class="row border-fuente border-bottom border-left border-right mx-5">
                         <div class="recipe-image col-12 col-md-6 d-md-block d-inline-block p-0">
-                            <img th:src="@{/images/}+recipe_+${recipe.id}+.jpeg" alt="Recipe Image">
+                            <img th:src="@{/images/recipe/}+recipe_+${recipe.id}+.jpeg" alt="Recipe Image">
                         </div>
                         <div
                             class="recipe-full-info p-2 mt-3 col-md-5 col-12 d-md-block d-inline-block">
