modify responsive for home page

--- a/src/main/resources/templates/scss/custom.scss
+++ b/src/main/resources/templates/scss/custom.scss
@@ -180,11 +180,12 @@ ul {
 }
 
 .img-aboutus {
-  width: 40vw;
+  width: 100%;
+
 }
 
 .img-recipes {
-  width: 13vw;
+  width: 100%;
 }
 
 .recipe-picture {
@@ -206,7 +207,7 @@ ul {
 }
 
 .recipe-tags {
-  width: 13vw;
+  width: 100%;
   height: 40px;
   letter-spacing: 2px;
   position: relative;
