--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -8099,11 +8099,11 @@ ul {
 }
 
 .img-aboutus {
-  width: 40vw;
+  width: 100%;
 }
 
 .img-recipes {
-  width: 13vw;
+  width: 100%;
 }
 
 .recipe-picture {
@@ -8125,7 +8125,7 @@ ul {
 }
 
 .recipe-tags {
-  width: 13vw;
+  width: 100%;
   height: 40px;
   letter-spacing: 2px;
   position: relative;
