--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,12 +16,8 @@
         <main class="content">
             <div class="container-fluid bg-fondo">
                 <section class="py-5 border-bottom border-fuente text-center">
-                    <h1 class="text-info">
-                        Bienvenido a
-                        <img th:src="@{/images/logo/logo_nombre.png}" alt="NutriFusion Food"
-                            class="nutrifusion-food-welcome">
-                        <!-- <img src="../static/images/logo_nombre.png" alt="NutriFusion Food" class="nutrifusion-food-welcome">-->
-                    </h1>
+                    <h1 class="text-info "> Bienvenido a  <img th:src="@{/images/logo/logo_nombre.png}" alt="NutriFusion Food"
+                                                               class="nutrifusion-food-welcome"></h1>
                     <i class="fa-solid fa-heart heart-icon pb-3 text-resalte"></i>
                     <h3 class="pt-2">
                         "This Is a Message from the Blogger, Write Something Inspirational for the Readers to Enjoy"
@@ -29,18 +25,22 @@
                 </section>
 
                 <section class="container-lg border-bottom border-fuente text-center py-4">
-                    <a href="/categories" ><h2 class="text-info">CATEGORIAS</h2></a>
-                    <article class="d-inline-block px-5 py-3">
-                        <div class="d-inline-block px-4 ">
-                            <img th:src="@{/images/category/recetas.png}" alt="recipes" class="img-recipes d-block pb-3 rounded">
-                              <div class="recipe-tags bg-resalte d-inline-block text-left">
+                    <a href="/categories">
+                        <h2 class="text-info">CATEGORIAS</h2>
+                    </a>
+                    <div class="row justify-content-center">
+                        <div class="col-11 col-md-6 col-lg-4 col-xl-2 py-2">
+                            <img th:src="@{/images/category/recetas.png}" alt="recipes"
+                                class="img-recipes d-block pb-3 rounded">
+                            <div class="recipe-tags bg-resalte d-inline-block text-left">
                                 <a href="/recipes">
                                     <h3 class="d-inline-block ml-2">Recetas</h3>
                                 </a>
                             </div>
                         </div>
-                        <div class="d-inline-block px-4" th:each="category :${categoryList}">
-                            <img class="d-block pb-3 img-recipes rounded" th:src="@{/images/category/} + category_ + ${category.id} + .png">
+                        <div class="col-11 col-md-6 col-lg-4 col-xl-2 py-2" th:each="category :${categoryList}">
+                            <img class="d-block pb-3 img-recipes rounded"
+                                th:src="@{/images/category/} + category_ + ${category.id} + .png">
                             <div class=" bg-resalte recipe-tags text-left">
                                 <a th:href="@{${'/categories/' + category.id + '/recipes'}}">
                                     <h3 class="d-inline-block ml-2" th:text="${category.name}">
@@ -48,18 +48,17 @@
                                 </a>
                             </div>
                         </div>
-                    </article>
-                    <br>
+                    </div>
                 </section>
 
                 <section class="text-center px-2 py-4">
                     <i class="globe-icon fa-solid fa-mitten py-3 text-resalte"></i>
                     <h2 class="text-info pb-2">ACERCA DE NOSOTROS</h2>
-                    <div>
-                        <div class="d-inline-block">
+                    <div class="row justify-content-center">
+                        <div class=" col-11 col-md-5">
                             <img th:src="@{/images/about-us.png}" alt="about-us" class="img-aboutus rounded">
-                            </div>
-                        <div class="d-inline-block mx-5">
+                        </div>
+                        <div class="col-11 col-md-6">
                             <h3 class="pt-2">NutriFusion Food</h3> <br>
                             <p>We want to propose a site for the cooking fans to find healthy and tasty
                                 recipes created
@@ -76,7 +75,9 @@
         </main>
         <footer th:insert="fragments.html::footer"></footer>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
