Add img lang to header

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -8076,6 +8076,22 @@ ul {
   list-style: none;
 }
 
+/*
+.i8-dropdown__content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.i8-dropdown__wrap.open .i8-dropdown__content {
+  display: block;
+}
+
+.i8-dropdown__label {
+  cursor: pointer;
+}*/
 .content {
   flex: 1;
 }
@@ -8256,4 +8272,4 @@ p {
   font-family: Playfair Display;
   font-style: normal;
   color: #000000;
-}
+}/*# sourceMappingURL=custom.css.map */
