--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,100 +3,121 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" th:href="@{/css/custom.css}">
+
     <link rel="stylesheet" href="../static/css/custom.css">
+
     <title>fragments</title>
 </head>
 
 <body>
-    <header>
-        <div class=" container-fluid text-center border-fuente bg-resalte">
-            <div class="row justify-content-between text-center">
-                <div class="col-md-3 col-sm-4 col-xs-1 d-inline-block align-top">
-                    <div class="container-logo d-inline-block align-top pt-3">
-                        <img th:src="@{/images/logo/logo_NFF.png}" alt="NF-Logo" class="nf-logo d-inline">
-                    </div>
-                    <div class="d-inline-block mt-3">
-                        <div class="nutrifusion-food  d-none d-md-block ">
-                            <img th:src="@{/images/logo/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
+<header>
+    <div class=" container-fluid text-center border-fuente bg-resalte">
+        <div class="row justify-content-between text-center">
+            <div class="col-12 col-sm-4 col-md-3 d-inline-block align-top">
+                <div class="container-logo d-inline-block align-top pt-3">
+                    <img th:src="@{/images/logo/logo_NFF.png}" alt="NF-Logo" class="nf-logo d-inline">
+                </div>
+                <div class="d-inline-block mt-3">
+                    <div class="nutrifusion-food  d-none d-md-block ">
+                        <img th:src="@{/images/logo/logo_nombre.png}" alt="NutriFusion Food" class="nutrifusion-food">
 
-                        </div>
-                        <div class="slogan d-none d-xl-block ">
-                            <p th:text="#{menu.slogan}">Fusionando Sabor y Nutrición</p>
-                        </div>
+                    </div>
+                    <div class="slogan d-none d-xl-block ">
+                        <p th:text="#{menu.slogan}">Fusionando Sabor y Nutrición</p>
                     </div>
                 </div>
-                <div class="col-md-7 col-sm-6">
-                    <nav class="navbar-expand-md d-inline-block">
-                        <div class=" mt-3">
-                            <button class="navbar-toggler bg-info " type="button" data-bs-toggle="collapse"
+            </div>
+
+            <div class="col-12 col-sm-4 col-md-6">
+                <nav class="navbar-expand-md navbar-light  d-inline-block">
+                    <div class=" mt-3">
+                        <button class="navbar-toggler border-info" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
                                 aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="collapse navbar-collapse " id="navbarNavDropdown">
-                                <ul class="navbar d-xs-block">
-                                    <li class="nav-item border-top border-fuente"><a th:href="@{'/home' + '?lang=' + ${#locale.language}}"
-                                            class="nav-link active" th:text="#{menu.home}">INICIO</a></li>
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                            <ul class="navbar d-xs-block">
+                                <li class="nav-item border-top border-fuente"><a
+                                        th:href="@{'/home' + '?lang=' + ${#locale.language}}"
+                                        class="nav-link active" th:text="#{menu.home}">INICIO</a></li>
 
-                                    <li class="nav-item border-top border-fuente"><a th:href="@{'/recipes' + '?lang=' + ${#locale.language}}"
-                                            class="nav-link active" th:text="#{menu.recipes}">RECETAS</a></li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle border-top border-fuente" th:href="@{'/categories' + '?lang=' + ${#locale.language}}"
-                                            role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="#{menu.categories}">
-                                            CATEGORIAS
-                                        </a>
-                                        <ul class="dropdown-menu bg-fondo">
-                                            <li><a class="dropdown-item" href="/recipes">Todo</a></li>
-                                            <li>
-                                                <hr class="dropdown-divider bg-fuente">
-                                            </li>
-                                            <li><a class="dropdown-item" href="/categories/1/recipes">Salado</a></li>
-                                            <li><a class="dropdown-item" href="/categories/2/recipes">Postre</a></li>
-                                            <li><a class="dropdown-item" href="/categories/3/recipes">Bebida</a></li>
-                                            <li><a class="dropdown-item" href="/categories/4/recipes">Snack</a></li>
-                                        </ul>
-                                    </li>
-                                    <li class="nav-item border-top border-fuente"><a th:href="@{'/nutritionists/1' + '?lang=' + ${#locale.language}}"
-                                            class="nav-link active" th:text="#{menu.profile}">PERFIL</a></li>
-                                </ul>
-                            </div>
+                                <li class="nav-item border-top border-fuente"><a
+                                        th:href="@{'/recipes' + '?lang=' + ${#locale.language}}"
+                                        class="nav-link active" th:text="#{menu.recipes}">RECETAS</a></li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle border-top border-fuente"
+                                       th:href="@{'/categories' + '?lang=' + ${#locale.language}}"
+                                       role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                                       th:text="#{menu.categories}">
+                                        CATEGORIAS
+                                    </a>
+                                    <ul class="dropdown-menu bg-fondo">
+                                        <li><a class="dropdown-item" href="/recipes">Todo</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider bg-fuente">
+                                        </li>
+                                        <li><a class="dropdown-item" href="/categories/1/recipes">Salado</a></li>
+                                        <li><a class="dropdown-item" href="/categories/2/recipes">Postre</a></li>
+                                        <li><a class="dropdown-item" href="/categories/3/recipes">Bebida</a></li>
+                                        <li><a class="dropdown-item" href="/categories/4/recipes">Snack</a></li>
+                                    </ul>
+                                </li>
+                                <li class="nav-item border-top border-fuente"><a
+                                        th:href="@{'/nutritionists/1' + '?lang=' + ${#locale.language}}"
+                                        class="nav-link active" th:text="#{menu.profile}">PERFIL</a></li>
+                            </ul>
                         </div>
-                    </nav>
+                    </div>
+                </nav>
+            </div>
+            <div class="col-4 col-sm-1 col-md-1 mt-4">
+                <div class="row justify-content-center">
+                    <img th:src="@{images/lang_es.png}" alt="spain"/>
+                    <!--     <img width="48" height="48" src="https://img.icons8.com/color/48/spain-2.png" alt="spain-2"/>-->
                 </div>
-                <div class="col-md-2 col-sm-4  d-inline rounded mt-4">
-                    <div class="row justify-content-center">
-                        <div class="col-8 bg-info p-1">
-                            <div class="col-12 bg-info pt-2 border border-fondo bw-5">
-                                <a href="#">
-                                    <h4 class="text-fondo">Log in</h4>
-                                </a>
-                            </div>
+
+                <div class="row justify-content-center">
+                    <img th:src="@{images/lang_en.png}" alt="usa"/>
+                    <!--  <img width="48" height="48" src="https://img.icons8.com/color/48/usa.png" alt="usa"/>-->
+                </div>
+            </div>
+            <div class="col-8 col-sm-3 col-md-2 d-inline rounded mt-4 mb-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 bg-info justify-content-center p-1">
+                        <div class="col-12 justify-content-center text-center bg-info border border-fondo bw-1">
+                            <a href="/recipes/add">
+                                <h6 class="text-fondo justify-content-center pt-1 ">Log in</h6>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- <hr class="header border border-fuente">-->
-    </header>
-    <br>
 
-    <footer>
-        <div class="container-fluid bg-resalte border-top border-fuente">
-            <div class="icons text-center mt-3">
-                <i class=" fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class=" fa-brands fa-linkedin"></i>
-                <i class="  fa-brands fa-instagram"></i>
-            </div>
-            <p class="footer-text text-center mt-2">©2024 by NutriFusion Food</p>
-            <br>
+    <!-- <hr class="header border border-fuente">-->
+</header>
+<br>
+
+<footer>
+    <div class="container-fluid bg-resalte border-top border-fuente">
+        <div class="icons text-center mt-3">
+            <i class=" fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class=" fa-brands fa-linkedin"></i>
+            <i class="  fa-brands fa-instagram"></i>
         </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        <p class="footer-text text-center mt-2">©2024 by NutriFusion Food</p>
+        <br>
+    </div>
+</footer>
+<script src="../static/js/Desplegable.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-</body>
 
+<script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
+</body>
 </html>
