Add mappers in controller and modify thymeleaf

--- a/src/main/resources/templates/recipeForm.html
+++ b/src/main/resources/templates/recipeForm.html
@@ -14,14 +14,12 @@
 <div class="container">
     <header th:insert="fragments.html :: header">Header</header>
     <main class="content">
-        <form class=" m-2 g-3 needs-validation " novalidate>
+        <form class=" m-2 g-3 was-validated " th:action="@{/recipes}" th:object="${recipe}" method="post" novalidate>
             <div class="row">
-
-
                 <div class="col-md-5 my-2">
                     <label for="validationCustom01" class="form-label ">Nombre de la receta</label>
                     <input type="text" class="form-control border-info" id="validationCustom01"
-                           value="Nombre de la receta" required>
+                           placeholder="Nombre de la receta" th:field="*{name}" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
@@ -29,16 +27,15 @@
                 <div class="col-md-3 my-2">
                     <label for="numero">Duración de la receta:</label>
                     <input type="number" class="form-control  border-info" id="numero" name="numero"
-                           placeholder="Duración" required>
+                           placeholder="Duración" th:field="*{time}" required>
                     <div class="valid-feedback">
                         Looks good!
                     </div>
                 </div>
                 <div class="col-md-4 my-2">
                     <label for="categoria">Categoría:</label>
-                    <select class="form-control border-info" id="categoria" name="categoria" required>
+                    <select class="form-control border-info" id="categoria" name="categoria" th:field="*{category.id}" required>
                         <option value="" disabled selected>Selecciona una categoría...</option>
-                        Iterar sobre la lista de categorías
                         <option th:each="category : ${categoryList}" th:value="${category.id}"
                                 th:text="${category.name}">
                         </option>
@@ -48,10 +45,10 @@
             <div class="row">
                 <div th:each="entry:${ingredientMap}" class="col-md-4">
                     <label th:text="${entry.key.name}" for="type"></label>
-                    <select class="form-control border-info" id="type" name="type" required multiple>
+                    <select class="form-control border-info" id="type" name="typeIdList" required multiple>
                         <option value="" disabled selected>Selecciona los ingredientes...</option>
-                        <!-- Iterar sobre la lista de categorías -->
-                        <option th:each="ingredient : ${entry.value}" th:value="${ingredient.id}"
+                         Iterar sobre la lista de categorías
+                        <option th:each="ingredient: ${entry.value}" th:value="${ingredient.id}"
                                 th:text="${ingredient.name}">
                         </option>
                     </select>
@@ -60,8 +57,8 @@
             </div>
             <div class="row">
                 <div class="col-md-6 my-2">
-                    <label for="categoria">Utensilios:</label>
-                    <select class="form-control border-info" id="tool" name="tool" required multiple>
+                    <label for="tool">Utensilios:</label>
+                    <select class="form-control border-info" id="tool" name="toolIdList" required multiple>
                         <option value="" disabled selected>Selecciona los Utensilios...</option>
                         <!-- Iterar sobre la lista de categorías -->
                         <option th:each="tool : ${toolList}" th:value="${tool.id}"
@@ -73,7 +70,7 @@
                 <div class=" col-md-6 mb-3 my-2">
                     <label for="validationTextarea" class="form-label">Descripción de la receta</label>
                     <textarea class="form-control border-info" id="validationTextarea"
-                              placeholder="Breve Descripción..." required></textarea>
+                              placeholder="Breve Descripción..." th:field="*{description}" required></textarea>
                     <div class="invalid-feedback">
                         Introduce un mensaje
                     </div>
@@ -82,19 +79,26 @@
             <div class="row">
                 <div class=" col-md-6 mb-3 my-2">
                     <label for="validationTextarea" class="form-label">Pasos a seguir</label>
-                    <textarea class="form-control border-info" id="validationTextarea" placeholder="Pasos..."
+                    <textarea class="form-control border-info" id="validationTextarea" placeholder="Pasos..." th:field="*{steps}"
                               required></textarea>
                     <div class="invalid-feedback">
                         Introduce un mensaje
                     </div>
                 </div>
+                <div class="col-md-6 mb-3 my-2">
+                    <label for="lang" class="form-label">Idioma</label>
+                    <select class="form-control border-info" id="lang" name="lang" th:field="*{language}" required>
+                        <option value="" disabled selected>Selecciona un idioma...</option>
+                        <option th:value="'es'">Español</option>
+                        <option th:value="'en'">Ingles</option>
+                    </select>
+                </div>
             </div>
             <div class="row justify-content-center m-2 mt-2">
                 <div class="col-6 bg-info p-1">
                     <div class="col-12 bg-info pt-2 border border-fondo bw-5">
-                        <a href="/recipes">
-                            <h4 class="text-fondo text-center">AÑADIR RECETA</h4>
-                        </a>
+                        <button type="submit" class="btn btn-info text-fondo">AÑADIR RECETA</button>
+
                     </div>
                 </div>
             </div>
