--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,75 +11,75 @@
 </head>
 
 <body>
-    <div class="container">
-        <header th:insert="fragments.html :: header">Header</header>
-        <main class="content">
-            <div class="container-fluid bg-fondo">
-                <section class="py-5 border-bottom border-fuente text-center">
-                    <h1 class="text-info "> Bienvenido a  <img th:src="@{/images/logo/logo_nombre.png}" alt="NutriFusion Food"
-                                                               class="nutrifusion-food-welcome"></h1>
-                    <i class="fa-solid fa-heart heart-icon pb-3 text-resalte"></i>
-                    <h3 class="pt-2">
-                        "This Is a Message from the Blogger, Write Something Inspirational for the Readers to Enjoy"
-                    </h3>
-                </section>
+<div class="container">
+    <header th:insert="fragments.html :: header">Header</header>
+    <main class="content">
+        <div class="container-fluid bg-fondo">
+            <section class="py-5 border-bottom border-fuente">
+                <div class="d-flex justify-content-center flex-column align-items-center flex-sm-row" style="gap: 1.5rem">
+                        <h1 class="text-info" th:text="#{home.section.welcome}"> Bienvenido a </h1>
+                        <img th:src="@{/images/logo/logo_nombre.png}" alt="NutriFusion Food"
+                                          class="nutrifusion-food-welcome">
+                </div>
+                <div class="justify-content-center text-center">
+                <i class="fa-solid fa-heart heart-icon pb-3 text-resalte text-center justify-content-center"></i></div>
+                <div class="mx-3 px-3">
+                <h3 class="pt-2 text-center" th:text="#{home.message.welcome}">Si eres amante de la cocina este es el mejor lugar
+                    para encontrar recetas saludables y deliciosas creadas por nuestros nutricionistas</h3></div>
+            </section>
 
-                <section class="container-lg border-bottom border-fuente text-center py-4">
-                    <a href="/categories">
-                        <h2 class="text-info">CATEGORIAS</h2>
-                    </a>
-                    <div class="row justify-content-center">
-                        <div class="col-11 col-md-6 col-lg-4 col-xl-2 py-2">
-                            <img th:src="@{/images/category/recetas.png}" alt="recipes"
-                                class="img-recipes d-block pb-3 rounded">
-                            <div class="recipe-tags bg-resalte d-inline-block text-left">
-                                <a href="/recipes">
-                                    <h3 class="d-inline-block ml-2">Recetas</h3>
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-11 col-md-6 col-lg-4 col-xl-2 py-2" th:each="category :${categoryList}">
-                            <img class="d-block pb-3 img-recipes rounded"
-                                th:src="@{/images/category/} + category_ + ${category.id} + .png">
-                            <div class=" bg-resalte recipe-tags text-left">
-                                <a th:href="@{${'/categories/' + category.id + '/recipes'}}">
-                                    <h3 class="d-inline-block ml-2" th:text="${category.name}">
-                                    </h3>
-                                </a>
-                            </div>
+            <section class="container-lg border-bottom border-fuente text-center py-4">
+                    <h2 class="text-info" th:text="#{home.category}">CATEGORIAS</h2>
+                <div class="row justify-content-center">
+                    <div class="col-11 col-md-6 col-lg-4 col-xl-2 py-2">
+                        <img th:src="@{/images/category/recetas.png}" alt="recipes"
+                             class="img-recipes d-block pb-3 rounded">
+                        <div class="recipe-tags bg-resalte d-inline-block text-left">
+                            <a href="/recipes">
+                                <h3 class="d-inline-block ml-2" th:text="#{home.category.text}">Recetas</h3>
+                            </a>
                         </div>
                     </div>
-                </section>
-
-                <section class="text-center px-2 py-4">
-                    <i class="globe-icon fa-solid fa-mitten py-3 text-resalte"></i>
-                    <h2 class="text-info pb-2">ACERCA DE NOSOTROS</h2>
-                    <div class="row justify-content-center">
-                        <div class=" col-11 col-md-5">
-                            <img th:src="@{/images/about-us.png}" alt="about-us" class="img-aboutus rounded">
-                        </div>
-                        <div class="col-11 col-md-6">
-                            <h3 class="pt-2">NutriFusion Food</h3> <br>
-                            <p>We want to propose a site for the cooking fans to find healthy and tasty
-                                recipes created
-                                by nutritionists. <br>
-                                Our name came from our interest of the fusion between food and nutrition. <br>
-                                We want to create a site more minimalist with all the main information but that
-                                maintains an
-                                attractive style.</p>
+                    <div class="col-11 col-md-6 col-lg-4 col-xl-2 py-2" th:each="category :${categoryList}">
+                        <img class="d-block pb-3 img-recipes rounded"
+                             th:src="@{/images/category/} + category_ + ${category.id} + .png">
+                        <div class=" bg-resalte recipe-tags text-left">
+                            <a th:href="@{${'/categories/' + category.id + '/recipes'}}">
+                                <h3 class="d-inline-block ml-2" th:text="${category.name}">
+                                </h3>
+                            </a>
                         </div>
                     </div>
+                </div>
+            </section>
 
-                </section>
-            </div>
-        </main>
-        <footer th:insert="fragments.html::footer"></footer>
-    </div>
+            <section class="text-center px-2 py-4">
+                <i class="globe-icon fa-solid fa-mitten py-3 text-resalte"></i>
+                <h2 class="text-info pb-2" th:text="#{home.aboutus}">ACERCA DE NOSOTROS</h2>
+                <div class="row justify-content-center">
+                    <div class=" col-11 col-md-5">
+                        <img th:src="@{/images/about-us.png}" alt="about-us" class="img-aboutus rounded">
+                    </div>
+                    <div class="col-11 col-md-6">
+                        <h3 class="pt-2" th:text="#{home.aboutus.title}">NutriFusion Food</h3> <br>
+                        <p th:text="#{home.aboutus.message}">
+                            Nuestro nombre proviene de nuestro interés por la fusión entre la comida y la nutrición.
+                            Los nutricionistas crean todas las recetas para aportar mayor fiabilidad y una mejor experiencia gastronómica nutricional.
+                            Queremos crear una web más minimalista con toda la información principal pero que mantenga un estilo atractivo.
+                        </p>
+                    </div>
+                </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-            crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
+            </section>
+        </div>
+    </main>
+    <footer th:insert="fragments.html::footer"></footer>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
 
 </body>
 
