--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -18,12 +18,12 @@
     <ul class="px-0 mb-0">
         <div th:each="recipe, stat : ${recipeList}">
             <section class="container-fluid d-inline-block d-md-inline-block p-0">
-                <div class="recipes-info bg-fondo border-top border-bottom border-fuente row justify-content-between">
+                <div class="recipes-info bg-fondo border-top border-bottom border-fuente row mx-0 justify-content-between">
                     <div class="recipe-picture col-12 col-md-6 p-0"
                         th:classappend="${stat.index % 2 == 0} ? 'order-md-first' : 'order-md-last'">
                         <img th:src="@{/images/recipe/}+recipe_+${recipe.id}+.jpeg" alt="Recipe Image">
                     </div>
-                    <div class="recipe-data col-12 col-md-6 justify-content-center align-center border-top pb-1 px-0"
+                    <div class="recipe-data col-12 col-md-6 justify-content-center align-center border-top pb-1 px-0 my-3"
                         th:classappend="${stat.index % 2 == 0} ? 'order-md-last' : 'order-md-first'">
                         <li class="recipe-category-name fw-normal">
                             <a th:href="@{${'/recipes/' + recipe.id}}">
