--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/custom.css}">
+    <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
     <title>Error</title>
 </head>
 <body>
-<h2>Error 404-Pagina no encontrada</h2>
+    <div class="container">
+        <header th:insert="fragments.html :: header">Header</header>
+        <main class="content">
+            <div class="bg-fondo text-center text-info py-5">
+                <h3 class="error-message">Nuestro horno se sobrecalentó. Estamos enfriándolo, vuelve en un momento.
+                    <br>
+                    <img th:src="@{/images/}+error.jpeg" alt="Imagen de Error">
+                </h3>
+            </div>
+        </main>
+        <footer th:insert="fragments.html :: footer">Footer</footer>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+
+    <script src="https://kit.fontawesome.com/2508d31af3.js" crossorigin="anonymous"></script>
 </body>
 </html>
