Add language for fragments page

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -53,14 +53,14 @@
                                         CATEGORIAS
                                     </a>
                                     <ul class="dropdown-menu bg-fondo">
-                                        <li><a class="dropdown-item" href="/recipes">Todo</a></li>
+                                        <li><a class="dropdown-item" href="/recipes" th:text="#{menu.dropdown1}">Todo</a></li>
                                         <li>
                                             <hr class="dropdown-divider bg-fuente">
                                         </li>
-                                        <li><a class="dropdown-item" href="/categories/1/recipes">Salado</a></li>
-                                        <li><a class="dropdown-item" href="/categories/2/recipes">Postre</a></li>
-                                        <li><a class="dropdown-item" href="/categories/3/recipes">Bebida</a></li>
-                                        <li><a class="dropdown-item" href="/categories/4/recipes">Snack</a></li>
+                                        <li><a class="dropdown-item" href="/categories/1/recipes" th:text="#{menu.dropdown2}">Salado</a></li>
+                                        <li><a class="dropdown-item" href="/categories/2/recipes" th:text="#{menu.dropdown3}">Postre</a></li>
+                                        <li><a class="dropdown-item" href="/categories/3/recipes" th:text="#{menu.dropdown4}">Bebida</a></li>
+                                        <li><a class="dropdown-item" href="/categories/4/recipes" th:text="#{menu.dropdown5}">Snack</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item border-top border-fuente"><a
